--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,14 @@ div .inner-container {
   margin:0px;
 }
 
+.card {
+  cursor:pointer;
+}
+
+.card:hover {
+  border: 1px solid #4285F4;
+}
+
 .card-img-top {
   height:50px;
   margin-top:10px;
